Fixed Wrong Positioning of Window

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,5 +9,5 @@ html, body, #container {
 
 .window {
 	background: #333;
-	position: relative;
+	position: absolute;
 }
